--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,14 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "CommonJS",
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"target": "es6",
 		"noImplicitAny": true,
-		"moduleResolution": "node",
+		"moduleResolution": "Node",
 		"sourceMap": true,
 		"outDir": "dist",
+        "rootDir": "src",
 		"baseUrl": ".",
 		"paths": {
 			"*": ["node_modules/*", "src/types/*"]
