--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
