--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.4.4",
     "@types/helmet": "^4.0.0",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^9.0.5",
@@ -27,11 +28,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.4.2",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
